[#85049] Refactored code so that adding missing road sections in comparison with nwb is added to accessibility service.